added easeljs, changed app menu

--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,13 @@
     
     <script src="includes/nwjs-analytics/analytics.js"></script>
 
-    <!-- npm modules -->
-    <!--script src="node_modules/fs-extra/lib/index.js"></script-->
+    <!-- EaselJS -->
+    <script src="includes/easelJS/easeljs-0.8.2.min.js"></script>
 
     <link rel="stylesheet" href="main.css" media="screen"/>
 
     <script src="js/main.js"></script>
+    <script src="js/canvas.js"></script>
 
     <!-- Insert this line after script imports -->
     <script>if (window.module) module = window.module;</script>
@@ -32,7 +33,7 @@
 </head>
 <body>
 
-    
+    <div id="main-canvas"></div>
 
 </body>
 </html>
