using phaserjs instead

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
     
     <script src="includes/nwjs-analytics/analytics.js"></script>
 
-    <!-- EaselJS -->
-    <script src="includes/easelJS/easeljs-0.8.2.min.js"></script>
+    <!-- PhaserJS -->
+    <script src="includes/phaserJS/phaser.min.js"></script>
 
     <link rel="stylesheet" href="main.css" media="screen"/>
 
