--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,24 @@
 
     <link rel="stylesheet" href="main.css" media="screen"/>
 
+    <script src="js/library.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/canvas.js"></script>
 
     <!-- Insert this line after script imports -->
     <script>if (window.module) module = window.module;</script>
 
 </head>
 <body>
+
+    <div class="library">
+        <div class="actions">
+            <button class="btn-add"><i class="mdi mdi-plus"></i></button>
+        </div>
+
+        <div class="object-tree">
+
+        </div>
+    </div>
 
     <div id="main-canvas"></div>
 
