--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,11 @@
 
     <link rel="stylesheet" href="main.css" media="screen"/>
 
+    <script src="js/canvas.js"></script>
     <script src="js/library.js"></script>
     <script src="js/main.js"></script>
+
+    <script src="test.js"></script>
 
     <!-- Insert this line after script imports -->
     <script>if (window.module) module = window.module;</script>
