loading and saving library tree

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             <button class="btn-add"><i class="mdi mdi-plus"></i></button>
         </div>
 
-        <div class="object-tree">
+        <div class="object-tree folder" data-name="root">
 
         </div>
     </div>
