spritesheet image selection

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,9 @@
         </div>
     </div>
 
-    <div id="main-canvas"></div>
+    <div class="workspace">
+        <div id="main-canvas"></div>
+    </div>
 
 </body>
 </html>
