spritesheet module frame outlines

--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,7 @@
         </div>
     </div>
 
-    <div class="workspace">
-        <div id="main-canvas"></div>
-    </div>
+    <div class="workspace"></div>
 
 </body>
 </html>
