entity added, codemirror, saving, lots of stuff

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 
     <div class="library">
         <div class="actions">
-            <button class="btn-add"><i class="mdi mdi-plus"></i></button>
+            <button class="btn-add hidden"><i class="mdi mdi-plus"></i></button>
         </div>
 
         <div class="object-tree folder" data-name="root">
