working on build/run

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,10 @@
                 <i class="mdi mdi-code-tags"></i>
             </button>
         </div>
+        <div class="ui-btn-group gamebuttons">
+            <button class="btn-run"><i class="mdi mdi-play"></i></button>
+            <button class="btn-build"><i class="mdi mdi-package-variant-closed"></i></button>
+        </div>
         <div class="ui-btn-group titlebuttons">
             <button class="btn-minimize"><i class="mdi mdi-window-minimize"></i></button>
             <button class="btn-maximize"><i class="mdi mdi-window-maximize"></i></button>
