build/run functional

--- a/projects/new_project/BUILDS/html/index.html
+++ b/projects/new_project/BUILDS/html/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title><TITLE></title>
-    <SCRIPTS>
+    <script src="assets/scripts/entity/entity0_46b301c5.js"></script>
+	<script src="assets/scripts/state/state0_85234cdd.js"></script>
+
     <script src="phaser.min.js"></script>
     <script src="main.js"></script>
 </head>
