--- a/projects/2d_platformer/BUILDS/html/index.html
+++ b/projects/2d_platformer/BUILDS/html/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title><TITLE></title>
-    <SCRIPTS>
     <script src="phaser.min.js"></script>
+    	<script src="assets/scripts/state/state0_35cee3f8.js"></script>
+
     <script src="main.js"></script>
 </head>
 <body>
