ui checkbox update, settings panel in progress

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
 
     <link rel="stylesheet" href="main.css" media="screen"/>
 
+    <script src="js/ui.js"></script>
     <script src="js/ide.js"></script>
     <script src="js/project.js"></script>
     <script src="js/canvas.js"></script>
@@ -48,6 +49,7 @@
         <div class="ui-btn-group gamebuttons">
             <button class="btn-run"><i class="mdi mdi-play"></i></button>
             <button class="btn-build"><i class="mdi mdi-package-variant-closed"></i></button>
+            <button class="btn-settings"><i class="mdi mdi-settings"></i></button>
         </div>
         <div class="ui-btn-group titlebuttons">
             <button class="btn-minimize"><i class="mdi mdi-window-minimize"></i></button>
@@ -73,6 +75,8 @@
     </div>
 
     <div class="workspace"></div>
+
+    <div class="ui-dialog-container"></div>
 
 </body>
 </html>
