--- a/src/engines/phaser/index.html
+++ b/src/engines/phaser/index.html
@@ -6,6 +6,13 @@
     <SCRIPTS>
     <script src="phaser.min.js"></script>
     <script src="main.js"></script>
+
+    <style type="text/css">
+    	body {
+    		margin: 0px;
+    		overflow: hidden;
+    	}
+    </style>
 </head>
 <body>
 
