dig prototype, something.saved event tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,8 @@
             </div>
         </div>
 
+        <div class="constant-items"></div>
+        
         <div class="object-tree folder expanded" data-name="root" data-uuid="0">
             <div class="children"></div>
             <div class="name"></div>
