--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8" />
     <title><TITLE></title>
-    <script src="assets/scripts/entity/entity0_46b301c5.js"></script>
-	<script src="assets/scripts/state/state0_85234cdd.js"></script>
-
+    <SCRIPTS>
     <script src="phaser.min.js"></script>
     <script src="main.js"></script>
+
+    <style type="text/css">
+    	body {
+    		margin: 0px;
+    		overflow: hidden;
+    	}
+    </style>
 </head>
 <body>
 
