--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
     <!-- PhaserJS -->
     <script src="includes/phaserJS/phaser.min.js"></script>
 
+    <!-- BlankE UI -->
+    <link rel="stylesheet" href="includes/blanke-kit/blanke-ui.css"/>
+    <script src="includes/blanke-kit/blanke.js"></script>
+
     <link rel="stylesheet" href="main.css" media="screen"/>
 
     <script src="js/console.js"></script>
@@ -63,7 +67,7 @@
 
     <div class="library">
         <div class="actions">
-            <button class="btn-add hidden"><i class="mdi mdi-plus"></i></button>
+            <button class="btn-add hidden" disabled><i class="mdi mdi-plus"></i></button>
             <button class="btn-folder hidden"><i class="mdi mdi-folder-plus"></i></button>
             <div class="ui-checkbox">
                 <input class="btn-delete" type="checkbox">
