--- a/projects/dig - Copy/assets/index.html
+++ b/projects/dig - Copy/assets/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>my game</title>
-    	<script src="assets/scripts/state/state0_70faae84.js"></script>
-
+    <title><TITLE></title>
+    <SCRIPTS>
     <script src="phaser.min.js"></script>
     <script src="main.js"></script>
 
@@ -18,6 +17,6 @@
 <body>
 
 	<div id="phaser-game"></div>
-  
+
 </body>
 </html>
