--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 
     <link rel="stylesheet" href="main.css" media="screen"/>
 
+    <script src="js/util.js"></script>
     <script src="js/console.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/ide.js"></script>
@@ -61,6 +62,8 @@
             <button class="btn-maximize" title="Maximize"><i class="mdi-svg" data-icon="window-maximize"></i></button>
             <button class="btn-close" title="Close"><i class="mdi-svg" data-icon="close"></i></button>
         </div>
+
+        <div class="progress-bar"></div>
     </div>
 
     <div class="library">
