changes weren't committed for some reason

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,12 @@
     <!-- PhaserJS -->
     <script src="includes/phaserJS/phaser.min.js"></script>
 
+    <!-- CodeMirror -->
+    <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css"/>
+    <link rel="stylesheet" href="node_modules/codemirror/theme/monokai.css"/>
+    <link rel="stylesheet" href="node_modules/codemirror/addon/dialog/dialog.css"/>
+    <link rel="stylesheet" href="node_modules/codemirror/addon/hint/show-hint.css"/>
+
     <!-- BlankE UI -->
     <link rel="stylesheet" href="includes/blanke-kit/blanke-ui.css"/>
     <script src="includes/blanke-kit/blanke.js"></script>
@@ -43,7 +49,13 @@
     <script>if (window.module) module = window.module;</script>
 
 </head>
-<body>
+<body class="not-ready">
+    <div class="load-splash">
+        <div class="draggable"></div>
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+    </div>
+
     <div class="titlebar">
         <div class="ui-btn-group actionbuttons">
             <button class="btn-newproject" title="new project"><i class="mdi-svg" data-icon="file-outline"></i></button>
