code_editor: added tab/index settings

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <!-- Insert this line above script imports  -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 
+    <!-- UnderscoreJS -->
+    <script src="http://underscorejs.org/underscore.js"></script>
+
     <!-- jQuery -->
     <link href="includes/jquery/jquery-ui/jquery-ui.min.css" rel="stylesheet"/>
     <script src="includes/jquery/jquery-2.2.0.min.js"></script>
