initial program run css bug

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     <script>if (window.module) module = window.module;</script>
 
 </head>
-<body class="not-ready">
+<body class="not-ready" project-open="0">
     <div class="load-splash">
         <div class="draggable"></div>
         <div class="circle1"></div>
