large ui changes

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <div class="workspace"></div>
+    <div class="grid"></div>
 
     <div class="ui-dialog-container"></div>
 
