bugfix: loading >1 plugins

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
     <script src="includes/jquery/jquery-2.2.0.min.js"></script>
     <script src="includes/jquery/jquery-ui/jquery-ui.min.js"></script>
 
+    <!-- jQuery Color Picker -->
+    <link href="includes/color-picker/css/colorPicker.css" rel="stylehseet"/>
+    <script src="includes/color-picker/js/jquery.colorPicker.min.js"></script>
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="includes/font-awesome/css/font-awesome.min.css"/>
 
