the return of workspace. scene uses it :)

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,8 @@
         </div>
     </div>
 
+    <div id="workspace"></div>
+
     <div class="grid"></div>
 
     <div class="ui-dialog-container"></div>
