map_editor: polygon placer bug insanity fixed

--- a/src/index.html
+++ b/src/index.html
@@ -6,28 +6,25 @@
     <!-- Insert this line above script imports  -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 
-    <!-- UnderscoreJS -->
-    <script src="http://underscorejs.org/underscore.js"></script>
-
     <!-- jQuery -->
     <link href="includes/jquery/jquery-ui/jquery-ui.min.css" rel="stylesheet"/>
     <script src="includes/jquery/jquery-2.2.0.min.js"></script>
     <script src="includes/jquery/jquery-ui/jquery-ui.min.js"></script>
 
-    <!-- jQuery Color Picker -->
-    <link href="includes/color-picker/css/colorPicker.css" rel="stylehseet"/>
-    <script src="includes/color-picker/js/jquery.colorPicker.min.js"></script>
+    <!-- jQuery Color Picker (UNUSED)-->
+    <!-- link href="includes/color-picker/css/colorPicker.css" rel="stylehseet"/ -->
+    <!-- script src="includes/color-picker/js/jquery.colorPicker.min.js"></script -->
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="includes/font-awesome/css/font-awesome.min.css"/>
+    <!-- Font Awesome (UNUSED)-->
+    <!-- link rel="stylesheet" href="includes/font-awesome/css/font-awesome.min.css"/ -->
 
     <!-- Material Design Icons -->
     <link href="node_modules/mdi/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
     
     <script src="includes/nwjs-analytics/analytics.js"></script>
 
-    <!-- PhaserJS -->
-    <script src="includes/phaserJS/phaser.min.js"></script>
+    <!-- PhaserJS (UNUSED)-->
+    <!-- script src="includes/phaserJS/phaser.min.js"></script -->
 
     <!-- CodeMirror -->
     <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css"/>
@@ -54,8 +51,8 @@
     <script>if (window.module) module = window.module;</script>
 
 </head>
-<body class="not-ready" project-open="0">
-<!-- body project-open="0" -->
+<!-- body class="not-ready" project-open="0"-->
+<body project-open="0">
     <div class="load-splash">
         <div class="draggable"></div>
         <div class="circle1"></div>
