working scene object

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,8 @@
     <script>if (window.module) module = window.module;</script>
 
 </head>
-<body class="not-ready" project-open="0">
+<!-- body class="not-ready" project-open="0"-->
+<body project-open="0">
     <div class="load-splash">
         <div class="draggable"></div>
         <div class="circle1"></div>
