missing js include

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
     
     <script src="includes/nwjs-analytics/analytics.js"></script>
 
-    <!-- PhaserJS (UNUSED)-->
-    <!-- script src="includes/phaserJS/phaser.min.js"></script -->
+    <!-- PhaserJS (TODO: replace with Konva) -->
+    <script src="includes/phaserJS/phaser.min.js"></script>
 
     <!-- CodeMirror -->
     <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css"/>
@@ -51,8 +51,8 @@
     <script>if (window.module) module = window.module;</script>
 
 </head>
-<!-- body class="not-ready" project-open="0"-->
-<body project-open="0">
+<body class="not-ready" project-open="0">
+<!--body project-open="0"-->
     <div class="load-splash">
         <div class="draggable"></div>
         <div class="circle1"></div>
